<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:id="@+id/add_bottomsheet_view_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:overScrollMode="always"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/bottomsheet_view_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/new_task"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:textColor="?android:attr/textColorSecondary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/exerciseNameTF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/voluntaryCheck"
            android:checked="true"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_task_as_voluntary"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/memberTF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nickname_of_member"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manage_subtasks_information"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="?android:attr/textColorSecondary"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addToSubtasks"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:text="@string/add_subtask" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/subtasks"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@id/addToSubtasks"
                android:hint="@string/subtask" />

        </RelativeLayout>

        <com.google.android.material.card.MaterialCardView
            android:visibility="gone"
            android:id="@+id/list_holder_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.CardView.Elevated"
            android:layout_margin="8dp">

            <androidx.recyclerview.widget.RecyclerView
                android:nestedScrollingEnabled="false"
                android:id="@+id/subtasksList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:clipToPadding="false"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/buttonAdd"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>
