<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:gravity="center"
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_member"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:textColor="?android:attr/textColorSecondary" />

        <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorError">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/information_prename"
                    android:textColor="?attr/colorOnError"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:id="@+id/memberNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textColor="?android:attr/textColorSecondary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/membersName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/prename">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <GridLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:backgroundTint="?attr/colorError"
                android:id="@+id/buttonDelete"/>

            <com.google.android.material.button.MaterialButton
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:id="@+id/buttonUpdate"/>
        </GridLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>